--- a/src/styles/components/_containers.scss
+++ b/src/styles/components/_containers.scss
@@ -1,4 +1,5 @@
 .svg-container {
 	position:absolute;
+	z-index:1000;
 }
 
