--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -2,13 +2,14 @@
 
 .steps {
 	font-family: 'Work Sans', sans-serif;
+	padding:3rem 0 0 3rem;
 }
 
 .header {
 	font-family: 'Work Sans', sans-serif;
 	position:fixed;
 	right:0;
-	padding-right: 2rem;
+	padding:3rem 3rem 0 0;
 	cursor:pointer;
 }
 
